<resources>
    <string name="app_name">HW6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Зубенко Михаил Петрович</string>
    <string name="nav_header_subtitle">Мафиозник</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Моя страница</string>
    <string name="menu_news">Новости</string>
    <string name="menu_messages">Сообщения</string>
    <string name="menu_review">Поддержка</string>
    <string name="send_review">Отправить отзыв</string>
    <string name="edit_review">Оставить отзыв</string>
    <string name="info">Введите ваше имя:</string>
    <string name="review">Оставьте ваш отзыв:</string>
    <string name="bug">Если вы нашли ошибки или столкнулись с какой-либо проблемой, напишите об этом:</string>
    <string name="input_text">…</string>
    <string name="user_review">Ваш отзыв</string>
</resources>
