<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.review.ReviewFragment2">

    <EditText
        android:id="@+id/et_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16" />

    <EditText
        android:id="@+id/et_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_info"
        app:layout_constraintVertical_bias="0.16" />

    <EditText
        android:id="@+id/et_bug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_review"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/send_report_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#995CB800"
        android:elevation="12dp"
        android:padding="12dp"
        android:text="@string/send_review"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_bug"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/text_box1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        app:layout_constraintBottom_toTopOf="@+id/et_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_box2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review"
        app:layout_constraintBottom_toTopOf="@+id/et_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_info" />

    <TextView
        android:id="@+id/text_box3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bug"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/et_bug"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_review" />
</androidx.constraintlayout.widget.ConstraintLayout>